 * added even more missing helpfiles...
 * [#io.quicktimeapple]: added brightness, contrast, hue and colour
   (saturation) control
 * [#io.x11]: setcursor: support 77 cursors instead of 64;
   and reject out-of-range values
 * [#color]: faster
 * [#io.videodev]: added colorspace rgba, with alpha=255.
 * [#camera]: added colorspace rgba
 * [#io.quartz]: added support for keypress and keyrelease
 * [#io.quicktimecamera]: colorspace rgba's alpha=255 now.
 * [#io.quicktimecamera]: added colorspaces y, yuv, rgb.

version 9.8 (2010.04.01):

 * fixed GCC >= 4.4.3 related problem (?) with c++ templates...
 * fixed [gf/mouse_spy] crash (also related to [#see])
 * small fixes to colouring of [display] and [#see]
 * added [gf/selector] [gf/getcwd] [gf/find_file] [gf/canvas_index]
 * OSX: print real error messages instead of error #-43, etc.
 * OSX: [#io.quartz] reports position
 * [#in]: lookup file in -path and the dir of the patch containing [#in]
 * removed annoying posts/errors when loading helpfiles
 * [#print]: fix bug with negative numbers in base 8 and 16
 * [# **]: fixed crash with negative numbers
 * [#out x11]: hide close-button
 * [#out x11]: add "border $1" method for hiding window-border (for fullscreen)
 * major update to cellular_1d.pd, instant_blur.pd, markov.pd, ...
 * reviewed and updated a lot of examples.
 * added examples : rgb_delay.pd dither.pd
 * [#]: added back an important optimisation to save on RAM
 * [#fold] [#scan]: allow op avg, op hypot
 * [#fold] [#scan]: better check for unallowed ops
 * merged binary_operations.pd + videodev_effects.pd -> various_effects.pd
 * [#in] [#out] output "not_open" in outlet 1, to answer a message in closed
   mode
 * [#in] load has a $2 as a shortcut for open $1, cast $2, bang, close
 * [#in videodev] (linux cameras): trying to add YUYV support (palette 8)
   (please test)
 * [#out x11] [#out quartz] [#out sdl] [#see] accept greyscale
 * [gf/canvas_loadbang]: fixed bug