@@ -16,7 +16,7 @@ L = much later (whenever we get to know how to do it...)
 [x] [#io.quartz] keypress/keyrelease
 [L] [#io.quartz] setcursor/hidecursor
 [ ] [#io.quartz] fullscreen mode
-[!] [#io.quartz] hide menubar
+[x] [#io.quartz] hide menubar
 [ ] [#io.quicktime (apple) out] grid, codec, quality.
 [ ] add [cv/#SVD] etc (-lcv) to OSX packages
 [ ] on PPC, retest [#to_pix] with alpha etc...
